--- a/astrocalculator/astrocalc.web/package.json
+++ b/astrocalculator/astrocalc.web/package.json
@@ -4,6 +4,8 @@
 	"private": true,
   "devDependencies": {
     "jquery": "2.2.3",
-    "bootstrap": "3.3.6","bootswatch": "3.3.6"
+    "bootstrap": "3.3.6",
+    "bootswatch": "3.3.6",
+    "angular": "1.5.3"
   }
 }
