--- a/astrocalculator/astrocalc.web/package.json
+++ b/astrocalculator/astrocalc.web/package.json
@@ -6,6 +6,7 @@
     "jquery": "2.2.3",
     "bootstrap": "3.3.6",
     "bootswatch": "3.3.6",
-    "angular": "1.5.3"
+    "angular": "1.5.3",
+    "angular-route": "1.5.5"
   }
 }
