--- a/astrocalculator/astrocalc.api/project.json
+++ b/astrocalculator/astrocalc.api/project.json
@@ -8,7 +8,8 @@
         "Microsoft.AspNet.Server.IIS": "1.0.0-beta5",
         "Microsoft.AspNet.Server.WebListener": "1.0.0-beta5",
         "Microsoft.AspNet.StaticFiles": "1.0.0-beta5",
-        "Microsoft.Framework.Configuration.Json": "1.0.0-beta5"
+        "Microsoft.Framework.Configuration.Json": "1.0.0-beta5",
+        "Microsoft.Net.Http": "2.2.22"
     },
 
     "commands": {
@@ -18,7 +19,7 @@
     "frameworks": {
         "dnx451": {
             "dependencies": {
-                
+
             }
         },
         "dnxcore50": { }
