--- a/astrocalculator/astrocalc.api/project.lock.json
+++ b/astrocalculator/astrocalc.api/project.lock.json
@@ -5351,7 +5351,8 @@
       "Microsoft.AspNet.Server.WebListener >= 1.0.0-beta5",
       "Microsoft.AspNet.StaticFiles >= 1.0.0-beta5",
       "Microsoft.Framework.Configuration.Json >= 1.0.0-beta5",
-      "Microsoft.Net.Http >= 2.2.22"
+      "Microsoft.Net.Http >= 2.2.22",
+      "Microsoft.AspNet.Cors >= 1.0.0-beta5"
     ],
     "DNX,Version=v4.5.1": [],
     "DNXCore,Version=v5.0": []
