--- a/astrocalculator/astrocalc.app/astrocalc.app.csproj
+++ b/astrocalculator/astrocalc.app/astrocalc.app.csproj
@@ -66,6 +66,8 @@
     <Compile Include="Repos\MonthRepo.cs" />
     <Compile Include="Repos\Repo.cs" />
     <Compile Include="Repos\ZenithRepo.cs" />
+    <Compile Include="Services\Algebric.cs" />
+    <Compile Include="Services\Solar.cs" />
     <Compile Include="Services\SuryaKranti.cs" />
     <None Include="SuryaKranti.cs" />
     <None Include="SuryKranti.cs" />
